# fastapi-postgers-backend

./: .coveragerc  .dockerignore  .env.examle  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  asgi.py  cron  docker-compose.dev.yaml  globals.py  manage.sh  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  settings.py
RNG/: Dockerfile
RNG/rng/: pom.xml
alembic/: env.py
blocker/: Dockerfile  README.md  app.py  blocker.py  redis_.py  requirements.txt  utils.py
commands/: create_eth_network.py  pg_trgm.py
models/: __init__.py  custom_types.py  db.py  log.py  other.py  user.py  utils.py
models/logs/: env.py
observability/alloy/: config.alloy
observability/loki/: config.yml
redis/: redis.conf
routers/: __init__.py  admin.py  app.py  auth.py  cron.py  instabingo.py  tg.py  user.py  utils.py
routers/admin/: __init__.py  admins.py  auth.py  dashboard.py  games.py  instabingo.py  jackpots.py  kyc.py  lobby.py  profile.py  referral.py  users.py
schemes/: admin.py  auth.py  base.py  game.py  instabingo.py  tg.py  user.py
src/: asgi.py  globals.py  handler.py  middlewares.py
src/exceptions/: api.py  balance.py  base.py  currency.py  game.py  jackpot.py  limit.py  network.py  operation.py  pydantic.py  user.py
src/models/: __init__.py  custom_types.py  db.py  limit.py  log.py  other.py  signals.py  storage.py  user.py  utils.py
templates/: passport.html
tests/: conftest.py
utils/: __init__.py  datastructure.py  decorator.py  rng.py  signature.py  web3.py  worker.py  workers.py
worker/: worker.py
(+156 files in other folders)
