[project]
name = "bingo"
version = "0.1.0"
description = ""
authors = [
    {name = "Zaur",email = "zaur.dzasohov@yandex.com"}
]
readme = "README.md"
requires-python = ">3.9.0,<3.9.1 || >3.9.1,<4"
dependencies = [
    "pydantic (==2.10.6)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "fastapi-storages (==0.3.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiogram (==3.17.0)",
    "alembic (==1.14.1)",
    "sqlalchemy (==2.0.37)",
    "asyncpg (==0.30.0)",
    "uvicorn (==0.34.0)",
    "redis (==5.2.1)",
    "web3 (==7.8.0)",
    "tronpy (==0.5.0)",
    "uvloop (==0.21.0)",
    "httptools (==0.6.4)",
    "rq (==2.3.2)",
    "requests (>=2.32.3,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "alembic-postgresql-enum (==1.7.0)",
    "boto3 (==1.37.0)",
    "pycryptodome (==3.21.0)",
    "cryptography (==44.0.2)",
    "python-jose (==3.4.0)",
    "bcrypt (==4.0.1)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "pillow (==11.2.1)",
    "phonenumbers (==8.13.53)",
    "requests-auth-aws-sigv4 (>=0.7,<0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.26.0"
pytest-cov = "6.1.1"
httpx = "0.28.1"

